test/libyul/yulSyntaxTests/for_expr_invalid_2.yul
{
	for 1 1 {} {}
}
// ----
// ParserError 2314: (7-8='1'): Expected '{' but got 'Number'
